[package]
name = "iec60870-5"
version = "0.1.0"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license-file = "LICENSE.md"
description = "IEC 60870-5 101/104 protocol implementation"
repository = "https://github.com/roboplc/iec60870-5"
keywords = ["iec", "60870-5", "plc", "energy", "industrial"]
readme = "README.md"
autoexamples = false

[dependencies]
bma-ts = { version = "0.1.13", features = ["chrono"] }
chrono = "0.4.38"
thiserror = "1.0.61"
